labs/examples/design-patterns-examples/src/com/examples/design/solid/i/good/Robot.java
package com.examples.design.solid.i.good;

public class Robot implements IWorkable{
    public void work() {
        // ....working
    }
}
