labs/examples/design-patterns-examples/src/com/examples/design/solid/i/bad/Worker.java
package com.examples.design.solid.i.bad;

public class Worker implements IWorker{
    public void work() {
        // ....working
    }
    public void eat() {
        // ...... eating in launch break
    }
}
